--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>bysizzle</title>
 </head>
 <body>
     <table>
       <tr style="background-color: #B1CCB5;">
-            <td align="center" width="120px" height="100px">
-                <img src="sizzle.jpeg" alt="">
+            <td align="center" style="width: 120px; height: 80px;">
+                <div class="sizzle" style="display: flex;">
+                    <div class="sizzle"><img src="sizzle.jpeg" width="400px" style="padding: 10px 10px 10px ;"></div>
+                </div>
                 <br>
-                <button style="border: white 15px solid; border-radius: 15px; margin-bottom: 50px ;"><a href="https://wa.me/message/7S6UVUSCYQVTM1"</a> Pesan Sekarang</button>
+                <button style="border: white 15px solid; border-radius: 15px; margin-bottom: 50px ;"><a href="https://wa.me/message/7S6UVUSCYQVTM1"> Pesan Sekarang</button>
             </td>
             <br>
         </tr>
         <tr style="background-color: #B1CCB5; color: #ffffff;">
-            <td align="center" width="120px" height="50px">&copy copyright bySizzle</td>
+            <td align="center" >&copy copyright bySizzle</td>
         </tr>
     </table>
 </body>
