--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table>
       <tr style="background-color: #B1CCB5;">
-            <td align="center" style="width: 120px; height: 80px;">
+            <td style="width: 120px; height: 80px;">
                 <div class="sizzle" style="display: flex;">
                     <div class="sizzle"><img src="sizzle.jpeg" width="400px" style="padding: 10px 10px 10px ;"></div>
                 </div>
